# Rocket-Engine

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  makefile
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
KiCad/: 5VRelay.kicad_sym  Control_Room.kicad_sch  MAX6675.kicad_sym  Sensors.kicad_sym  Solenoids.kicad_sym  Systems&Electronics.kicad_pcb  Systems&Electronics.kicad_pro  Systems&Electronics.kicad_sch  USB_UART.kicad_sym  arduino-library.kicad_sym  fp-lib-table  sym-lib-table  ~Systems&Electronics.kicad_sch.lck
KiCad/Comms_Board/: Comms_Board.kicad_pcb  Comms_Board.kicad_pro  Comms_Board.kicad_sch  fp-lib-table
KiCad/Comms_Board/Communications.pretty/: RS485_Transceiver.kicad_mod
KiCad/Communications.pretty/: RS485_Transceiver.kicad_mod
KiCad/Engine_Mainboard/: 5VRelay.kicad_sym  Control_Room.kicad_sch  MAX6675.kicad_sym  Sensors.kicad_sym  Solenoids.kicad_sym  Systems&Electronics.kicad_pcb  Systems&Electronics.kicad_pro  Systems&Electronics.kicad_sch  arduino-library.kicad_sym  sym-lib-table
KiCad/Engine_Mainboard/Communications.pretty/: RS485_Transceiver.kicad_mod
KiCad/Engine_Mainboard/Sensors.pretty/: AD8495.kicad_mod  HX711.kicad_mod
KiCad/Engine_Mainboard/Systems&Electronics/Systems&Electronics/: Systems&Electronics.kicad_pro
KiCad/Engine_Mainboard/ValveControl.pretty/: Relay.kicad_mod
KiCad/Sensors.pretty/: AD8495.kicad_mod  HX711.kicad_mod
KiCad/Systems&Electronics/: Systems&Electronics.kicad_pro
KiCad/ValveControl.pretty/: Relay.kicad_mod
data/2025-11-09-15:09:31/: sensor-data.ods
data/2025-11-09-16:59:16/: sensor-data.ods
docs/communications/: readme.md
docs/control_room/: readme.md
src/: Thermocouple_Spaceflight.ino  engineControl3.ino
src/EngineFirmware1.2/: EngineFirmware1.2.ino  commands.h  pins.h  sensors.h
src/RocketEngineControlGUI/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave
src/RocketEngineControlGUI/communications/: command.h  dataio.h  sensordata.h  serialcommunicator.cpp  serialcommunicator.h  serialdatawriter.cpp  serialdatawriter.h  serialworker.cpp  serialworker.h
src/RocketEngineControlGUI/components/: alertdialog.cpp  alertdialog.h  alertdialog.ui  datachart.cpp  datachart.h  datachart.ui
src/RocketEngineControlGUI/logging/: loghandler.cpp  loghandler.h
src/SensorTests/: loadCell.ino
src/ServoController/: ServoController.ino
src/comms/: recieve.ino  transmit.ino
src/comms/recieve/: recieve.ino
src/comms/transmit/: transmit.ino
src/control_room/: SerialCommunicator.cpp  SerialCommunicator.hpp  data_io.hpp  main.cpp  ui.cpp  ui.hpp
src/den/: arduino_test1.ino  command.cpp  command.h  main.cpp  mainwindow.cpp  mainwindow.h  recv.h  serial_handler.h  test.pro  thre.cpp  thre.h  window.cpp  window.h
src/den/arduino_test1/: arduino_test1.ino
src/engineControl3/: Loadcell_Spaceflight.ino  engineControl3.ino
src/engine_control/: UARTCommunicator.cpp  UARTCommunicator.hpp  data_io.hpp  engine_control.ino  engine_control.into (COPY 2)  engine_control_2.ino  main.cpp
src/engine_control/pressure_transducer_test/: pressure_transducer_test.ino
src/ignition/: ignition.ino
